<resources>
    <!--app-->
    <string name="app_name">Media Player</string>

    <!--activity titles-->
    <string name="result_list_name">Library</string>
    <string name="search_name">Search</string>

    <!--menu-->
    <string name="action_about">About</string>

    <!--navigation drawer-->
    <string name="drawer_open">Select An Option</string>

    <!--music player controller-->
    <string name="music_player_controller_now_playing">Now Playing</string>
    <string name="music_player_controller_play_previous_song">Play Previous Song</string>
    <string name="music_player_controller_play_pause_song">Play/Pause Current Song</string>
    <string name="music_player_controller_play_next_song">Play Next Song</string>
    <string name="music_player_controller_repeat_current_song">Repeat Current Song</string>

    <!--results list-->
    <string name="results_list_artists">Artists</string>
    <string name="results_list_albums">Albums</string>
    <string name="results_list_playlists">Playlists</string>
    <string name="results_list_genres">Genre</string>
    <string name="results_list_songs">Songs</string>

    <!--search-->
    <string name="search_search">Search</string>

    <!--drawer item-->
    <string name="drawer_item_icon">Icon</string>
    <string name="main_activity_sync_in_progress">Sync in Process</string>
    <string name="main_activity_library">Library</string>
    <string name="main_activity_search">Search</string>
    <string name="main_activity_sync">Sync</string>
</resources>
