<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/layoutBtns">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/results_list_artists"
            android:id="@+id/artists_button"
            android:textSize="@dimen/menu_text_size"
            android:layout_weight="1"
            android:singleLine="true" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/results_list_albums"
            android:id="@+id/albums_button"
            android:textSize="@dimen/menu_text_size"
            android:layout_weight="1"
            android:singleLine="true" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/results_list_playlists"
            android:id="@+id/playlists_button"
            android:textSize="@dimen/menu_text_size"
            android:layout_weight="1"
            android:singleLine="true" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/results_list_genres"
            android:id="@+id/genres_button"
            android:textSize="@dimen/menu_text_size"
            android:layout_weight="1"
            android:singleLine="true" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/results_list_songs"
            android:id="@+id/titles_button"
            android:textSize="@dimen/menu_text_size"
            android:layout_weight="1"
            android:singleLine="true" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/results_list"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>