<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="bottom">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/now_playing_list"
        android:layout_above="@+id/seek_bar_and_buttons_linear_layout"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/seek_bar_and_buttons_linear_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_player_controller_now_playing"
            android:id="@+id/now_playing_text_view"
            android:layout_marginTop="@dimen/text_margin"
            android:singleLine="true"
            android:textSize="@dimen/menu_text_size" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seek_bar"
            android:indeterminate="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prev_button"
                android:src="@drawable/previous"
                android:contentDescription="@string/music_player_controller_play_previous_song" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_pause_button"
                android:src="@drawable/play"
                android:contentDescription="@string/music_player_controller_play_pause_song" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_button"
                android:src="@drawable/next"
                android:contentDescription="@string/music_player_controller_play_next_song" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/repeat_button"
                android:src="@drawable/repeat_off"
                android:contentDescription="@string/music_player_controller_repeat_current_song" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
